--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
+    "@next-auth/firebase-adapter": "^0.1.3",
+    "firebase": "^8.10.0",
     "next": "latest",
+    "next-auth": "^3.28.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
