--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^3.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-responsive-carousel": "^3.2.21"
+    "react-responsive-carousel": "^3.2.21",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
