--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^3.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.21",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
